# vectara

./: .gitignore  AGENTIC_WORKFLOW_GUIDE.md  AGENT_VS_TRADITIONAL_COMPARISON.md  DELIVERABLES.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_SUMMARY.txt  NEW_CLIENT_ONBOARDING.md  QUICK_REFERENCE_SUPABASE.md  QUICK_START.md  README.md  SUPABASE_MIGRATION_COMPLETE.md  SUPABASE_MIGRATION_PLAN.md  VERTEX_AI_MIGRATION.md  agentic_workflow.py  agents.txt  case_study_setup.md  client_brief_generator.py  client_onboarding_queue.md  example_client_onboarding.sh  intake_websites_output.csv  local_llm_hynes.py  maps-for-onboarding.csv  new_client_ingestion.py  package-lock.json  package.json  paper-giants_brief_20251005_013113.md  pdf_processing_docs.md  pr-return_brief_20251005_035803.md  pyproject.toml  quick_setup_vertex_ai.sh  requirements-dev.txt  requirements.txt  run.sh  run_client_queue.py  sensiq_brief_20251005_035759.md  setup.py  supabase_brief_generator.py  supabase_client_ingestion.py  supabase_vector_store.py  (+5 more)
documentation/: BRIEF_UPLOAD_CHANGELOG.md  BRIEF_UPLOAD_QUICKSTART.md  CLEANUP_COMPLETE.md  CLEANUP_PLAN.md  CLIENT_NAME_METADATA_IMPLEMENTATION.md  COMPLETE_WORKFLOW_GUIDE.md  DRIVE_FOLDER_TEST_GUIDE.md  DRIVE_PERMISSIONS_TROUBLESHOOTING.md  DRIVE_UPLOAD_GUIDE.md  DRIVE_UPLOAD_TEST_GUIDE.md  FINAL_STRUCTURE.md  FOLDER_REORGANIZATION.md  GOOGLE_WORKSPACE_MCP_SETUP.md  GPT_VS_MARKITDOWN_COMPARISON.md  INDEX.md  INTERFACE_IMPROVEMENTS.md  MARKITDOWN_FILE_SUPPORT.md  MARKITDOWN_FORMAT_UPDATE.md  OAUTH_SETUP_GUIDE.md  PDF_OUTPUT_FORMAT.md  PDF_PROCESSOR_GUIDE.md  PDF_REPROCESSING_INTEGRATION.md  PDF_REPROCESSING_TIMING_FIX.md  PROCESSOR_QUICK_REFERENCE.md  PROJECT_STRUCTURE.md  README.md  (+3 more)
vertex_ai_rag/: .gitignore  AGENT_REFERENCE.md  INDEX.md  INTEGRATION_COMPLETE.md  INTEGRATION_PLAN.md  METADATA_GUIDE.md  README.md  SETUP_GUIDE.md  check_agent_logs.py  debug_output.txt  pyproject.toml  requirements.txt  setup_corpus.py  test_agent_debug.py  test_agent_simple.py  verify_metadata.py  vertex_ai_uploader.py
vertex_ai_rag/agents/: case_study_summarizer.py  client_intake_summarizer.py  client_materials_summarizer.py  enhanced_agent_example.py  shared_prompts.py  unique_mechanism_researcher.py  website_summarizer.py
vertex_ai_rag/agents/tools/: __init__.py  google_search_tool.py  rag_metadata_search.py
vertex_ai_rag/deployment/: deploy_agent.py  deploy_all_agents.py  grant_permissions.sh  query_agent.py  query_agent_rest.py
vertex_ai_rag/ingestion/: client_ingestion_adapter.py
vertex_ai_rag/shared/: __init__.py  config.py  vertex_rag_client.py
(+5778 files in other folders)
